app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
  name: app-ingress
spec:
  rules:
    - host: app.rbachkarou.tl.scntl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
  name: kiali-ingress
  namespace: istio-system
spec:
  rules:
    - host: kiali.rbachkarou.tl.scntl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
  name: grafana-ingress
  namespace: istio-system
spec:
  rules:
    - host: grafana.rbachkarou.tl.scntl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
